fix comment, add Faker, add Get ingredient response

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+    <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
       <version>5.5.0</version>
@@ -99,6 +104,14 @@
         <version>2.10.0</version>
         <configuration>
           <reportVersion>${allure.version}</reportVersion>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
     </plugins>
